loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:5: error: not found: value gaucge
gaucge()
^