loopfor.LoopStairs.scala.code
avance()
avance()
avance()
avance()
gaucge()
var x =0
for (x<- 0 to 7) {
  avance()
  droite()
}
droite()
droite()
droite()
droite()